[gd_scene load_steps=7 format=3 uid="uid://bgm28uvfjb2m7"]

[ext_resource type="Script" path="res://scene/enemy_day_melee.gd" id="1_g2a15"]
[ext_resource type="Texture2D" uid="uid://bubqhu0hrg5j3" path="res://charaTBD - Copy.png" id="2_hnmhs"]
[ext_resource type="Texture2D" uid="uid://14wnrv1n5jof" path="res://assets/Lightning.png" id="3_lv8ah"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ow03b"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_6cdfq"]
radius = 21.2132

[sub_resource type="CircleShape2D" id="CircleShape2D_l55oa"]
radius = 153.0

[node name="Enemy_Day_Melee" type="CharacterBody2D"]
collision_layer = 64
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_g2a15")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.09748, 1.09748)
texture = ExtResource("2_hnmhs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ow03b")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_path_custom_color = Color(0.772549, 0, 0.27451, 1)

[node name="PathfindingCooldown" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ReturnCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("3_lv8ah")
texture_scale = 0.1

[node name="Health" type="ProgressBar" parent="."]
offset_left = -30.0
offset_top = 9.0
offset_right = 30.0
offset_bottom = 15.0
show_percentage = false

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_6cdfq")

[node name="PathfindingArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathfindingArea"]
shape = SubResource("CircleShape2D_l55oa")
debug_color = Color(0.835294, 0, 0.584314, 0.678431)

[connection signal="timeout" from="PathfindingCooldown" to="." method="_on_pathfinding_cooldown_timeout"]
[connection signal="timeout" from="ReturnCooldown" to="." method="_on_return_cooldown_timeout"]
[connection signal="body_entered" from="PathfindingArea" to="." method="_on_pathfinding_area_body_entered"]
[connection signal="body_exited" from="PathfindingArea" to="." method="_on_pathfinding_area_body_exited"]
